--- a/QuanLyThongTinDaoTao/Views/Courses/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Courses/Index.cshtml
@@ -78,8 +78,8 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Courses</h6>
-            <h1 class="mb-5">Popular Courses</h1>
+            <h6 class="section-title bg-white text-center text-primary px-3"></h6>
+            <h1 class="mb-5">DANH SÁCH KHÓA HỌC</h1>
         </div>
         <div class="row g-4 justify-content-center">
             @foreach (var khoaHoc in Model)
@@ -89,7 +89,7 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid" src="~/Asset/img/@khoaHoc.HinhAnh" + khoaHoc.HinhAnh)" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Thông Tin</a>
+                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Thông Tin Chi Tiết</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đăng Ký Học Ngay</a>
                             </div>
                         </div>
@@ -106,9 +106,12 @@
                             <h5 class="mb-4">@khoaHoc.TenKhoaHoc</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
-                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
+                            @*<small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>số lượng người học</small>*@
+                            <small class="flex-fill text-center border-end py-2">
+                                <i class="fa fa-clock text-primary me-2"></i>@khoaHoc.ThoiLuong <span class="fw-bold text-secondary">tiết</span>
+                            </small>
+
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>số lượng người học</small>
                         </div>
                     </div>
                 </div>
