--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "_MainLayout";
-
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -46,7 +42,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>TRUNG TÂM</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -66,8 +62,16 @@
                     </div>
                 </div>
                 <a href="@Url.Action("Contact", "Home")" class="nav-item nav-link">Contact</a>
+
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+
+            <a href="dang-ky.html" class="nav-item nav-link">
+                <i class="fa fa-user-plus"></i> Đăng ký
+            </a>
+            <a href="dang-nhap.html" class="nav-item nav-link">
+                <i class="fa fa-sign-in-alt"></i> Đăng nhập
+            </a>
+
         </div>
     </nav>
     <!-- Navbar End -->
