--- a/QuanLyThongTinDaoTao/Views/Home/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Home/Index.cshtml
@@ -362,3 +362,10 @@
     </div>
 </div>
 <!-- Testimonial End -->
+
+@if (TempData["LoginSuccess"] != null)
+{
+    <script>
+        alert("@Html.Raw(TempData["LoginSuccess"])");
+    </script>
+}
