--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HomeAdmin/KhoaHoc.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HomeAdmin/KhoaHoc.cshtml
@@ -7,7 +7,7 @@
 <style>
     .course-item {
         border: 2px solid #1ce9dd; /* Viền xung quanh khóa học */
-        border-radius: 50px;
+        border-radius: 30px;
         transition: all 0.3s ease-in-out;
         overflow: hidden;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -34,42 +34,48 @@
             padding: 5px;
         }
 </style>
-<div class="row m-lg-auto">
-    @foreach (var khoaHoc in Model)
-    {
-        <div class="col-lg-4 col-md-8 mt-5 " data-wow-delay="0.1s">
-            <div class="course-item bg-light">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src='@Url.Content("~/Asset/img/" + khoaHoc.HinhAnh)' alt="@khoaHoc.TenKhoaHoc" />
-                    <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                        <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Thông Tin Chi Tiết</a>
-                        <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đăng Ký Học Ngay</a>
+<div class="container-fluid">
+    <div class="row m-lg-auto">
+        @foreach (var khoaHoc in Model)
+        {
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-5 " data-wow-delay="0.1s">
+                <div class="course-item bg-light">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src='@Url.Content("~/Asset/img/" + khoaHoc.HinhAnh)' alt="@khoaHoc.TenKhoaHoc" />
+                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Thông Tin Chi Tiết</a>
+                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đăng Ký Học Ngay</a>
+                        </div>
                     </div>
-                </div>
-                <div class="text-center p-4 pb-0">
-                    <h3 class="mb-0">$149.00</h3>
-                    <div class="mb-3">
-                        <small class="fa fa-star text-primary"></small>
-                        <small class="fa fa-star text-primary"></small>
-                        <small class="fa fa-star text-primary"></small>
-                        <small class="fa fa-star text-primary"></small>
-                        <small class="fa fa-star text-primary"></small>
-                        <small>(123)</small>
+                    <div class="text-center p-3 pb-0">
+                        <h3 class="mb-0">$149.00</h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small>(123)</small>
+                        </div>
+                        <h5 class="m-0">@khoaHoc.TenKhoaHoc</h5>
                     </div>
-                    <h5 class="m-0">@khoaHoc.TenKhoaHoc</h5>
-                </div>
-                <div class="d-flex border-top">
-                    @*<small class="flex-fill text-center border-end py-2">
-                            <i class="fa fa-user-tie text-primary me-2"></i>số lượng người học
-                        </small>*@
-                    <small class="flex-fill text-center border-end py-2">
-                        <i class="fa fa-clock text-primary me-2"></i>@khoaHoc.ThoiLuong <span class="fw-bold text-secondary">tiết</span>
-                    </small>
-                    <small class="flex-fill text-center py-2">
-                        <i class="fa fa-user text-primary me-2"></i>số lượng người học
-                    </small>
+                    <div class="d-flex border-top">
+                        @*<small class="flex-fill text-center border-end py-2">
+                                <i class="fa fa-user-tie text-primary me-2"></i>số lượng người học
+                            </small>*@
+                        <small class="flex-fill text-center border-end py-2">
+                            <i class="fa fa-clock text-primary me-2"></i>@khoaHoc.ThoiLuong <span class="fw-bold text-secondary">tiết</span>
+                        </small>
+                        <small class="flex-fill text-center py-2">
+                            <i class="fa fa-user text-primary me-2"></i>số lượng người học
+                        </small>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 </div>
+
+
+
+
