--- a/QuanLyThongTinDaoTao/Asset/css/style.css
+++ b/QuanLyThongTinDaoTao/Asset/css/style.css
@@ -90,14 +90,14 @@
     margin-right: 30px;
     padding: 25px 0;
     color: #FFFFFF;
-    font-size: 15px;
+    font-size: 25px;
     text-transform: uppercase;
     outline: none;
 }
 
     .navbar-light .navbar-nav .nav-link:hover,
     .navbar-light .navbar-nav .nav-link.active {
-        color: var(--primary);
+        color: #000000;
     }
 
 @media (max-width: 991.98px) {
@@ -117,7 +117,7 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: var(--dark);
+    color: var(--light);
     font-weight: 500;
 }
 
