--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -17,7 +17,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>Khóa Học</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -54,9 +54,9 @@
     </div>
     <!-- Spinner End -->
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+    <nav class="navbar navbar-expand-lg navbar-light shadow sticky-top p-0" style="background-color: #308437;">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0" style="color: #15ba23"><i class="fa fa-book me-3"></i>TRUNG TÂM</h2>
+            <h2 class="m-0 text-white" ><i class="fa fa-book me-3"></i>TRUNG TÂM BÁO CHÍ TPHCM</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -67,8 +67,8 @@
                 <a href="@Url.Action("About", "Home")" class="nav-item nav-link">Về chúng tôi</a>
 
                 <a href="@Url.Action("Index", "Courses")" class="nav-item nav-link">Khóa Học</a>
-               
-                <a href="@Url.Action("Contact", "Home")" class="nav-item nav-link">Contact</a>
+
+
 
             </div>
             @if (User.Identity.IsAuthenticated)
@@ -87,12 +87,14 @@
             }
             else
             {
-                <a href="@Url.Action("Register", "Account")" class="nav-item nav-link">
-                    <i class="fa fa-user-plus"></i> Đăng ký
-                </a>
-                <a href="@Url.Action("Login", "Account")" class="nav-item nav-link">
-                    <i class="fa fa-sign-in-alt"></i> Đăng nhập
-                </a>
+                <li class="navbar-nav nav-item dropdown ms-auto p-4 p-lg-0">
+                    <a href="@Url.Action("Register", "Account")" class="nav-item nav-link">
+                        <i class="fa fa-user-plus"></i> Đăng ký
+                    </a>
+                    <a href="@Url.Action("Login", "Account")" class="nav-item nav-link">
+                        <i class="fa fa-sign-in-alt"></i> Đăng nhập
+                    </a>
+                </li>
             }
 
         </div>
@@ -103,11 +105,11 @@
     <!-- Carousel End -->
     @RenderBody()
     <!-- Footer Start -->
-    <div class="container-fluid bg-success text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid text-bg-dark footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s" style="background-color: #308437">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Link</h4>
+                    <h4 class="text-bg-dark mb-3">Quick Link</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
@@ -115,7 +117,7 @@
                     <a class="btn btn-link" href="">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
+                    <h4 class="text-bg-dark mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -127,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Gallery</h4>
+                    <h4 class="text-bg-dark mb-3">Gallery</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="~/Asset/img/course-1.jpg" alt="">
@@ -150,7 +152,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <h4 class="text-bg-dark mb-3">Newsletter</h4>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
