--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
@@ -43,7 +43,7 @@
                         <i class="fa-solid fa-circle-plus"></i> Thêm Khóa Học
                     </button>
                     <a href="@Url.Action("Index")" class="btn btn-secondary">
-                            <i class="fa-solid fa-arrow-left"></i> Quay lại
+                        <i class="fas fa-arrow-left me-1"></i> Quay lại
                     </a>
                </div>
              }
