--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -80,11 +80,11 @@
                 </div>
 
                 <div class="text-center">
-                    <button type="submit" class="btn btn-success me-2">
+                    <button type="submit" class="btn btn-success me-2 btn-lg">
                         <i class="fa-solid fa-circle-plus"></i> Thêm Lớp Học
                     </button>
-                    <a href="@Url.Action("Index")" class="btn btn-secondary">
-                        <i class="fa-solid fa-arrow-left"></i> Quay lại
+                    <a href="@Url.Action("Index")" class="btn btn-secondary btn-lg">
+                        <i class="fas fa-arrow-left me-1"></i> Quay lại
                     </a>
                 </div>
             }
