--- a/QuanLyThongTinDaoTao/Views/Courses/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Courses/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<QuanLyThongTinDaoTao.Models.KhoaHoc>
+﻿@model PagedList.IPagedList<QuanLyThongTinDaoTao.Models.KhoaHoc> 
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "Danh sách khóa học";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
@@ -22,58 +23,6 @@
     </div>
 </div>
 <!-- Header End -->
-<!-- Categories Start -->
-<div class="container-xxl py-5 category">
-    <div class="container">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Categories</h6>
-            <h1 class="mb-5">Courses Categories</h1>
-        </div>
-        <div class="row g-3">
-            <div class="col-lg-7 col-md-6">
-                <div class="row g-3">
-                    <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
-                        <a class="position-relative d-block overflow-hidden" href="">
-                            <img class="img-fluid" src="~/Asset/img/cat-1.jpg" alt="">
-                            <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                <h5 class="m-0">Web Design</h5>
-                                <small class="text-primary">49 Courses</small>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
-                        <a class="position-relative d-block overflow-hidden" href="">
-                            <img class="img-fluid" src="~/Asset/img/cat-2.jpg" alt="">
-                            <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                <h5 class="m-0">Graphic Design</h5>
-                                <small class="text-primary">49 Courses</small>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.5s">
-                        <a class="position-relative d-block overflow-hidden" href="">
-                            <img class="img-fluid" src="~/Assetimg/cat-3.jpg" alt="">
-                            <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                <h5 class="m-0">Video Editing</h5>
-                                <small class="text-primary">49 Courses</small>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 col-md-6 wow zoomIn" data-wow-delay="0.7s" style="min-height: 350px;">
-                <a class="position-relative d-block h-100 overflow-hidden" href="">
-                    <img class="img-fluid position-absolute w-100 h-100" src="img/cat-4.jpg" alt="" style="object-fit: cover;">
-                    <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin:  1px;">
-                        <h5 class="m-0">Online Marketing</h5>
-                        <small class="text-primary">49 Courses</small>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Categories Start -->
 <!-- Courses Start -->
 <div class="container-xxl py-5">
     <div class="container">
@@ -84,10 +33,19 @@
         <div class="row g-4 justify-content-center">
             @foreach (var khoaHoc in Model)
             {
+                // Kiểm tra và ưu tiên hình đại diện
+                var imagePath = !string.IsNullOrEmpty(khoaHoc.HinhDaiDienKhoaHoc)
+                    ? Url.Content(khoaHoc.HinhDaiDienKhoaHoc)
+                    : (khoaHoc.KhoaHocAttachments?
+                         .FirstOrDefault(a => a.Attachment != null &&
+                                              (a.Attachment.FileType.ToLower().Contains("jpg")
+                                               || a.Attachment.FileType.ToLower().Contains("png")
+                                               || a.Attachment.FileType.ToLower().Contains("jpeg")))?
+                          .Attachment?.FilePath ?? Url.Content("~/Upload/KhoaHoc/default.png"));
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="~/Asset/img/@khoaHoc.HinhAnh" + khoaHoc.HinhAnh)" alt="">
+                            <img class="img-fluid" src="@imagePath" alt="@khoaHoc.TenKhoaHoc">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Thông Tin Chi Tiết</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đăng Ký Học Ngay</a>
@@ -165,3 +123,39 @@
     </div>
 </div>
 <!-- Testimonial End -->
+<div class="d-flex justify-content-center mt-4">
+    <ul class="pagination">
+        @if (Model.HasPreviousPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("Index", new { page = Model.PageNumber - 1 })">&laquo;</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <a class="page-link">&laquo;</a>
+            </li>
+        }
+
+        @for (int i = 1; i <= Model.PageCount; i++)
+        {
+            <li class="page-item @(i == Model.PageNumber ? "active" : "")">
+                <a class="page-link" href="@Url.Action("Index", new { page = i })">@i</a>
+            </li>
+        }
+
+        @if (Model.HasNextPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("Index", new { page = Model.PageNumber + 1 })">&raquo;</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <a class="page-link">&raquo;</a>
+            </li>
+        }
+    </ul>
+</div>
